packages/web/src/scss/components/Header/_Header.scss
@use '../../tools/accessibility';
@use '../../tools/breakpoint';
@use '../../tools/reset';
@use '../../tools/svg';
@use '../../tools/typography';
@use 'theme';
@use 'tools';

.Header {
    @include typography.generate(theme.$typography);

    display: flex;
    align-items: center;
    flex: none;
    gap: theme.$header-gap;
    height: 68px;
    padding-inline: theme.$header-padding-x;
    background-color: transparent;
}

.Header__mobileOnlyActions {
    display: flex;
    align-items: center;
    gap: theme.$mobile-only-actions-gap;
    margin-left: auto;
}

.Header__icon {
    width: theme.$icon-size;
    height: theme.$icon-size;
    background-color: transparent;
    background-repeat: no-repeat;
}

.Header__icon--close {
    background-image: svg.escape(theme.$icon-close);
}

.Header__icon--menu {
    background-image: svg.escape(theme.$icon-menu);
}

.Header__bar,
.Header__dialog {
    $_shadow-offset: -2rem;

    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    display: grid;
    width: 280px;
    color: theme.$pane-color;
    background-color: theme.$pane-background-color;
    visibility: hidden;
    z-index: 1;
    transform: translateX(100%);

    &::after {
        @include tools.create-cover($top: $_shadow-offset, $bottom: $_shadow-offset);

        content: '';
        box-shadow: theme.$pane-shadow;
        z-index: -1;
    }

    @media (prefers-reduced-motion: no-preference) {
        transition-property: visibility, transform;
        transition-timing-function: ease-in-out;
        transition-duration: 0.25s;
    }
}

.Header__backdrop {
    @include tools.create-cover($position: fixed, $right: 100%, $left: auto);

    width: 100vw;
    background-color: theme.$backdrop-background-color;
    z-index: -2;
}

.Header__content {
    display: flex;
    flex-direction: column;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
}

.Header__actions {
    display: flex;
    flex-direction: column;
    gap: theme.$actions-row-gap;
    padding: theme.$actions-padding-y theme.$actions-padding-x;
}

.Header__actions--primary {
    flex: none;
}

.Header__actions--secondary {
    flex: 1;
}

.Header__nav {
    margin-inline: -1 * theme.$actions-padding-x;
    list-style: none;
}

.Header__navItem {
    display: flex;
}

.Header__close,
button.Header__link {
    @include reset.button();
}

.Header__close {
    @include accessibility.min-tap-target(theme.$close-button-size);

    align-self: flex-end;
    flex: none;
    margin-top: theme.$pane-padding;
    margin-right: theme.$pane-padding;
}

.Header__text {
    display: flex;
    justify-content: flex-start;
    width: 100%;
    padding: theme.$nav-item-padding-y theme.$nav-item-padding-x;
}

.Header__link,
button.Header__link {
    position: relative;
    display: flex;
    justify-content: flex-start;
    width: 100%;
    padding: theme.$nav-item-padding-y theme.$nav-item-padding-x;
    color: theme.$nav-link-color;
    background-color: theme.$nav-link-background-color;
    transition-property: color, background-color;
    transition-duration: 0.25s;

    // Current item border
    &::after {
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        width: theme.$nav-link-current-border-width;
        background-color: theme.$nav-link-current-border-color;
        transform: scaleX(0);
        transform-origin: right center;
    }

    &:hover {
        color: theme.$nav-link-color-hover;
        background-color: theme.$nav-link-background-color-hover;
    }

    &:active {
        color: theme.$nav-link-color-active;
        background-color: theme.$nav-link-background-color-active;
    }

    @media (prefers-reduced-motion: no-preference) {
        // Current item border
        &::after {
            transition: transform ease-out 0.25s;
        }
    }
}

.Header__link--current,
button.Header__link--current {
    color: theme.$nav-link-color-current;
    background-color: theme.$nav-link-background-color-current;

    &::after {
        transform: scaleX(1);
    }

    &:hover,
    &:active {
        color: theme.$nav-link-color-current;
        background-color: theme.$nav-link-background-color-current;
    }
}

@include breakpoint.up(theme.$breakpoint) {
    .Header__bar {
        position: static;
        display: flex;
        flex: 1;
        align-self: stretch;
        gap: theme.$header-gap;
        width: auto;
        background: transparent;
        visibility: visible;
        transform: none;
        transition: none;
    }

    .Header__mobileOnlyActions,
    .Header__bar .Header__close {
        display: none;
    }

    .Header__bar .Header__content {
        display: contents;
        overflow: visible;
    }

    .Header__bar .Header__nav {
        display: flex;
        align-self: stretch;
        margin-inline: 0;
    }

    .Header__bar .Header__actions {
        flex-direction: row;
        align-items: center;
        gap: theme.$actions-column-gap;
        padding: 0;
    }

    .Header__bar .Header__actions--secondary {
        flex: none;
        margin-left: auto;
    }

    .Header__bar .Header__text,
    .Header__bar .Header__link,
    .Header__bar button.Header__link {
        display: flex;
        align-items: center;
        padding: theme.$nav-item-padding-y-desktop theme.$nav-item-padding-x-desktop;

        // Current item border
        &::after {
            top: auto;
            left: 0;
            width: auto;
            height: theme.$nav-link-current-border-width;
            transform: scaleY(0);
            transform-origin: bottom center;
        }
    }

    .Header__bar .Header__link--current::after,
    .Header__bar button.Header__link--current::after {
        transform: scaleY(1);
    }
}

.Header--simple {
    height: 60px;
    justify-content: center;
}

.Header--inverted {
    color: theme.$header-inverted-color;
    background-color: theme.$header-inverted-background-color;
}

.Header__bar.is-open,
.Header__dialog.is-open {
    visibility: visible;
    transform: translateX(0);
}

.Header__bar.is-open::after,
.Header__bar.is-open > .Header__backdrop,
.Header__dialog.is-open::after,
.Header__dialog.is-open > .Header__backdrop {
    @include tools.show-cover();
}

